# Fruitpeel-ImgConv

./: .gitignore  README.md
fpimageconv/: pyproject.toml
fpimageconv/src/fpimageconv/: backend.py  converter.py  frontend.py  main.py  mainwindow.py
